# tg_assistant

./: api.dockerfile  bot.dockerfile  compose.yml  main.py  nginx-host.conf  pyproject.toml  scheduler.dockerfile
.claude/: settings.json
alembic/versions/: 2026_03_21_1008-38942e06dd47_.py  2026_04_05_1809-ea5b0e12e863_.py  2026_04_11_1430-fdb34d7990a9_init.py
envs/: .env.example  env.local
frontend/: app.js  index.html
nginx/: nginx.conf
scripts/: api_entrypoint.sh  entrypoint.sh  schedule_entrypoint.sh
src/: configs.py  handlers.py  utils.py
src/api/: app.py  auth.py  auth_router.py  dependencies.py  reminders.py  users.py
src/core/: unitofwork.py
src/database/: __init__.py  models.py
src/notifications/: email.py  telegram.py
src/reminders/: enums.py  handlers.py  schemes.py  services.py  utils.py
src/repository/: base.py  event.py  user.py
src/scheduler/: main.py  tasks.py  utils.py
src/templates/: email_set_invalid.md  email_set_success.md  event_added.md  event_confirm.md  event_deleted.md  event_edit_confirm.md  event_empty.md  event_list.md  event_updated.md  reminder_email.html  reminder_fire.md  renderer.py
src/user/: handlers.py  schemes.py  service.py
